Fixed some overlapping content on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -224,6 +224,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 9;
 }
 
 .movies .github-link a {
@@ -457,12 +458,12 @@ p {
 .notification {
   width: 100%;
   text-align: center;
-  position: absolute;
+  position: fixed;
   left: 0;
   bottom: 0;
   background: var(--color-text-white);
   padding: 20px;
-  z-index: 9;
+  z-index: 99;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 0 6px rgba(0,0,0,0.23);
   opacity: 0;
 }
